# robot-handshake-ros-nodes

./: .~lock.qbhand.odt#  NOTE  NOTE~  README.md  README.md~  guide_qbhand.txt  main.cpp  openloop description.odt  openloopdescription.odt  qbHand.cpp  qb_force_control.cpp  qbhand.odt  qbmove_communications.cpp  stats.ods  tests.ods  utils  utils~
GUI_handshake/: #handshake_demos.glade#  Handshake  README.md  handshake  handshake_demos.c  handshake_demos.c~  handshake_demos.glade  handshake_demos.glade~  service_btns.glade~  service_call_gui.c~
GUI_handshake/changetext_btn/: GUI  main.c  main.c~  test
Tesi - Tirocinio/: HandshakingIITDisney.docx
Tesi - Tirocinio/_TeX/: ._chap1.tex  Tesi.aux  Tesi.bbl  Tesi.bcf  Tesi.blg  Tesi.dvi  Tesi.lof  Tesi.out  (+16 more)
backup_git/: bridge.cpp  main2.cpp  qbCube.cpp  qbInterface.cpp  qb_class.cpp
beta/: breaklooponcondition.py  classEx.py  forbreak.cpp  keyboardhiteventcatch.py  pointers.cpp
calibrateFSR/: FSRfromDummy.csv  FSRfromDummy1.csv  FSRfromDummy2.csv  FSRfromDummy3.csv  FSRfromDummy4quad.csv  FSRfromDummy5.csv  FSRfromDummy6.csv  FSRfromDummy_grams.csv  FSRfromDummy_lin.csv  FSRfromDummy_oneside1.csv  calibrateFSR.m  calibrateFSR.m~  modelfitted.sfit  modelfitted3degree.sfit  modelfitted_6.sfit
ctrl/: READ_me  READ_me~  delay.ods  find_q0.csv  log_experiments.txt  log_experiments.txt~  manage_xp.py~
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
force estimation from current/: points_current.ggb
openloop_saves/: FSR,compare_openloop.eps  Francesco_onestep_stiff01.csv  Francesco_onestep_stiff04.csv  Francesco_stiff01.csv  Francesco_stiff07.csv  Leo10.csv  Leonardo_stiff07.csv  analyzedata.m  countrows.csv  pseudo_stiff06.csv  pseudo_stiff08.csv  pseudo_stiff095.csv  steps.csv  steps_v2.csv  test.csv  xp3_stiff_02.csv  xp4_onestep_stiff01.csv  xp4_onestep_stiff07.csv  xp4_stiff01.csv  xp4_stiff07.csv  xp4_stiff_01.csv  xp_onestep.csv  xp_test_time.csv  xp_test_time_stiff.csv
pictures/: dummipalm.xcf
sketch_feb26a/: sketch_feb26a.ino
src/qb_interface/: .cproject  .project  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt~  README.md  license.txt  package.xml
src/qb_interface/conf/: config.yaml  config.yaml~
src/qb_interface/include/: commands.h  compiling_error.txt  definitions.h  functions.h  qbCube.h  qbHand.h  qbInterface.h  qb_class.h  qb_force_control.h  qbmove_communications.h  sensors.h
src/qb_interface/src/: Controller1.cpp  FSM.py  FSR_current_control.cpp  FSRtoClosure.cpp  FSRtoClosure.cpp~  MachineState.cpp  MachineState.h  Open_close.cpp  Test_res_current.cpp  a.out  calibrateFSRsaveFile.py  calibratefsr.cpp  compiling_error.txt  csvread.cpp  csvread.cpp~  ctrl_1.cpp  ctrl_2.cpp  ctrl_2.py  ctrl_2a.py  ctrl_2b.py  ctrl_3.cpp  ctrl_3.py  ctrl_5.cpp  ctrl_file.cpp  ctrl_function.cpp  ctrl_function_pw.cpp  delaynode.py  filter.cpp~  find.cpp  find.cpp~  find_q0.py  fsm_handshake.c  hand_detect_closure.cpp  leggi.cpp  leggi.cpp~  model1.csv  open_close.py  openloop.py  qbInterface.cpp  qbInterface.tpp  (+6 more)
tests/: Andrea_0.csv  Andrea_1.csv  Andrea_2.csv  Andrea_3.csv  Andrea_4.csv  Davide_0.csv  Dummy_palm_0.csv  Dummy_palm_1.csv  Dummy_palm_2.csv  Dummy_palm_3.csv  Dummy_palm_4.csv  Empty_0.csv  Empty_1.csv  Empty_2.csv  Empty_3.csv  Empty_4.csv  FULL_0.csv  Francesco_0.csv  Francesco_1.csv  Francesco_2.csv  Francesco_3.csv  Francesco_4.csv  Gionata_0.csv  Gionata_1.csv  Gionata_2.csv  Gionata_3.csv  Gionata_4.csv  Leonardo_0.csv  Leonardo_1.csv  Leonardo_2.csv  Leonardo_3.csv  Leonardo_4.csv  Maria_0.csv  Maria_1.csv  Maria_2.csv  Maria_3.csv  Maria_4.csv
(+597 files in other folders)
