<?xml version="1.0"?>
<!-- BSD 3-Clause License Copyright (c) 2017, qbrobotics All rights reserved. 
	Redistribution and use in source and binary forms, with or without modification, 
	are permitted provided that the following conditions are met: * Redistributions 
	of source code must retain the above copyright notice, this list of conditions 
	and the following disclaimer. * Redistributions in binary form must reproduce 
	the above copyright notice, this list of conditions and the following disclaimer 
	in the documentation and/or other materials provided with the distribution. 
	* Neither the name of the copyright holder nor the names of its contributors 
	may be used to endorse or promote products derived from this software without 
	specific prior written permission. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT 
	HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, 
	BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS 
	FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT 
	HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, 
	EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT 
	OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS 
	INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, 
	STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN 
	ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY 
	OF SUCH DAMAGE. -->


<package>
	<name>qb_interface</name>
	<version>1.0.0</version>
	<description>The qb_interface package</description>

	<maintainer email="alessandro.raugi@qbrobotics.com">Alessandro Raugi</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!-- BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>


	<!-- Url tags are optional, but mutiple are allowed, one per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- Example: -->
	<!-- <url type="website">http://wiki.ros.org/qb_interface</url> -->


	<!-- Author tags are optional, mutiple are allowed, one per tag -->
	<!-- Authors do not have to be maintianers, but could be -->
	<!-- Example: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->


	<!-- The *_depend tags are used to specify dependencies -->
	<!-- Dependencies can be catkin packages or system dependencies -->
	<!-- Examples: -->
	<!-- Use build_depend for packages you need at compile time: -->
	<!-- <build_depend>message_generation</build_depend> -->
	<!-- Use buildtool_depend for build tool packages: -->
	<!-- <buildtool_depend>catkin</buildtool_depend> -->
	<!-- Use run_depend for packages you need at runtime: -->
	<!-- <run_depend>message_runtime</run_depend> -->
	<!-- Use test_depend for packages you need only for testing: -->
	<!-- <test_depend>gtest</test_depend> -->
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>message_runtime</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>